--- a/newknews/package.json
+++ b/newknews/package.json
@@ -30,6 +30,7 @@
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
   },
+  "proxy":"http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
