--- a/newknews/package.json
+++ b/newknews/package.json
@@ -17,6 +17,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.6",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26"
   }
 }
