--- a/newknews/package.json
+++ b/newknews/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.6.5",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
