--- a/newknews/package.json
+++ b/newknews/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.2.0",
     "framer-motion": "^7.6.5",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
