front: search page css 추가, back: api 수정

--- a/server/newknews/build.gradle
+++ b/server/newknews/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'com.opencsv:opencsv:5.5'
 }
 
 tasks.named('test') {
