--- a/newknews/package.json
+++ b/newknews/package.json
@@ -58,5 +58,5 @@
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26"
   },
-  "proxy": "https://fde6-210-106-232-212.jp.ngrok.io"
+  "proxy": "http://182.222.169.20:8000"
 }
